@@ -1527,8 +1527,7 @@ test tdbc::odbc-9.35 {stmt foreach - variable not found} {*}{
 	unset thePattern
 	$stmt close
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbc::odbc-9.36 {db foreach - variable not found} {*}{
@@ -1548,8 +1547,7 @@ test tdbc::odbc-9.36 {db foreach - variable not found} {*}{
     -cleanup {
 	unset thePattern
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbc::odbc-9.37 {rs foreach - too few args} {*}{
@@ -1909,8 +1907,7 @@ test tdbc::odbc-10.19 {allrows - variable not found} {*}{
     -cleanup {
 	unset thePattern
     }
-    -returnCodes error
-    -result {can't read "thePattern": variable is array}
+    -result {}
 }
 
 test tdbc::odbc-10.20 {allrows - too many args} {*}{
